--- a/appointa/index.html
+++ b/appointa/index.html
@@ -512,7 +512,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <div class="elementInner cardAPPOINTA ">
+                <div class="elementInner cardAPPOINTA heightXS">
                   <div class="Grid-cell">
                     <div class="Grid Grid--gutters Grid--1of6">
                       <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
@@ -529,7 +529,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="elementInner cardAPPOINTA ">
+                <div class="elementInner cardAPPOINTA heightXS">
                   <div class="Grid-cell">
                     <div class="Grid Grid--gutters Grid--1of6">
                       <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
@@ -548,9 +548,9 @@
             </div>
           </div>
           <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementInner cardAPPOINTA ">
+            <div class="Grid-cell ">
+              <div class="element ">
+                <div class="elementInner cardAPPOINTA heightXS">
                   <div class="Grid-cell">
                     <div class="Grid Grid--gutters Grid--1of6">
                       <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
@@ -559,7 +559,6 @@
                       <div class="Grid-cell">
                         <h4>What <strong>tools/methods</strong> are successful in scheduling job
                           interviews, why do you need them?
-
                         </h4>
                       </div>
                     </div>
@@ -567,17 +566,18 @@
                 </div>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="elementInner cardAPPOINTA ">
+
+            <div class="Grid-cell ">
+              <div class="element ">
+                <div class="elementInner cardAPPOINTA heightXS">
                   <div class="Grid-cell">
                     <div class="Grid Grid--gutters Grid--1of6">
                       <div class="Grid-cell"> <img class="iconM" src="iconPersonalcard.svg"
                           alt="se-arrow">
                       </div>
                       <div class="Grid-cell">
-                        <h4>How the scheduling tools <strong>help</strong> them in scheduling
-                          interviews for interviewer and interviewee
+                        <h4> How do the scheduling tools <strong>help</strong> the recruiters and recruiting coordinators to
+                          schedule job interviews for both interviewers and interviewees?
                         </h4>
                       </div>
                     </div>
@@ -585,6 +585,7 @@
                 </div>
               </div>
             </div>
+
           </div>
           <div class="blankHXS"></div>
         </div>
@@ -608,7 +609,7 @@
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of4">
             <div class="Grid-cell u-textCenter">
-              <div> <img class="iconML" src="ppl_recruiter.png" alt="se-arrow"></div>
+              <div> <img class="iconM" src="ppl_recruiter.png" alt="se-arrow"></div>
             </div>
             <div class="Grid-cell">
               <div>
@@ -624,198 +625,138 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
 
           <div class="Grid Grid--gutters Grid--1of4">
             <div class="Grid-cell u-textCenter">
-              <div> <img class="iconML" src="ppl_recruiter.png" alt="User"></div>
+              <div> <img class="iconM" src="ppl_candidate.png" alt="User"></div>
             </div>
             <div class="Grid-cell">
               <div>
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4 class=""> &#8220;I need to schedule <strong
-                    class="textDecor APPOINTA">as many
-                    interviews as possible</strong> in the allotted time. The
-                  goal is to schedule the interviews in such a way that no interviewer is
-                  overworked and all of the interviews are conducted in a timely
-                  manner.&#8221;
-                </h4>
+                  <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as many
+                      interviews as possible</strong> in the allotted time. The
+                    goal is to schedule the interviews in such a way that no interviewer is
+                    overworked and all of the interviews are conducted in a timely
+                    manner.&#8221;
+                  </h4>
                 </div>
               </div>
             </div>
           </div>
 
+          <div class="blankHXS"></div>
 
- 
-
-          <div class="Grid Grid--full">
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
+            </div>
             <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_recruiter.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4 class=""> &#8220;I need to schedule <strong
-                            class="textDecor APPOINTA">as many
-                            interviews as possible</strong> in the allotted time. The
-                          goal is to schedule the interviews in such a way that no interviewer is
-                          overworked and all of the interviews are conducted in a timely
-                          manner.&#8221;
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
+                    This
+                    means that the <strong class="textDecor APPOINTA">candidate should have
+                      all of the
+                      necessary documents and materials
+                      ready</strong>. The recruiter should also give the candidate a list of
+                    questions to
+                    prepare for in advance.&#8221;
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
+            </div>
+            <div class="Grid-cell">
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
+                      responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
+                      manager's schedule is
+                      full</strong>, I have to spend more time and effort working on the
+                    interview
+                    schedule.&#8221;
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_teammember.png" alt="User"></div>
+            </div>
+            <div class="Grid-cell">
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;I may also coordinate with hiring managers and other employees to
+                    <strong class="textDecor APPOINTA">ensure that
+                      the interview process runs smoothly</strong>.&#8221;
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_teammember.png" alt="User"></div>
+            </div>
+            <div class="Grid-cell">
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;I feel that it is best to schedule interviews in advance so that
+                    both
+                    parties
+                    have time to prepare. This also allows the us to <strong
+                      class="textDecor APPOINTA">gauge the interest of the
+                      candidate</strong> and ensure that they are still interested in the
+                    position.&#8221;</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
+            </div>
+            <div class="Grid-cell">
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
+                    help me to automate part of the scheduling process.&#8221;</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--1of4">
+            <div class="Grid-cell u-textCenter">
+              <div> <img class="iconM" src="ppl_candidate.png" alt="User"></div>
+            </div>
+            <div class="Grid-cell">
+              <div>
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure that
+                      the interviews are conducted in a timely and efficient manner</strong>, in
+                    order to avoid any delays in the
+                    hiring process.&#8221;</h4>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_teammember.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
-                          This
-                          means that the <strong class="textDecor APPOINTA">candidate should have
-                            all of the
-                            necessary documents and materials
-                            ready</strong>. The recruiter should also give the candidate a list of
-                          questions to
-                          prepare for in advance.&#8221;
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_recruiter.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
-                            responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
-                            manager's schedule is
-                            full</strong>, I have to spend more time and effort working on the
-                          interview
-                          schedule.&#8221;
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_recruiter.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;I may also coordinate with hiring managers and other employees to
-                          <strong class="textDecor APPOINTA">ensure that
-                            the interview process runs smoothly</strong>.&#8221;
-                        </h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_recruiter.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;I feel that it is best to schedule interviews in advance so that
-                          both
-                          parties
-                          have time to prepare. This also allows the us to <strong
-                            class="textDecor APPOINTA">gauge the interest of the
-                            candidate</strong> and ensure that they are still interested in the
-                          position.&#8221;</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_teammember.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
-                          help me
-                          to
-                          automate part of the scheduling process.&#8221;</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid-cell">
-                  <div class="Grid Grid--gutters Grid--1of6 Grid--top">
-                    <div class="Grid-cell"> <img class="iconML" src="ppl_candidate.png"
-                        alt="se-arrow">
-                    </div>
-                    <div class="Grid-cell">
-                      <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                        <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure
-                            that
-                            the interviews are conducted in a timely
-                            and efficient manner</strong>, in order to avoid any delays in the
-                          hiring
-                          process.&#8221;</h4>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
 
         <div class="blankHS"></div>
