--- a/appointa/index.html
+++ b/appointa/index.html
@@ -576,7 +576,8 @@
                           alt="se-arrow">
                       </div>
                       <div class="Grid-cell">
-                        <h4> How do the scheduling tools <strong>help</strong> the recruiters and recruiting coordinators to
+                        <h4> How do the scheduling tools <strong>help</strong> the recruiters and
+                          recruiting coordinators to
                           schedule job interviews for both interviewers and interviewees?
                         </h4>
                       </div>
@@ -606,16 +607,15 @@
           </div>
         </div>
         <!-- Arrow -->
+
         <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_recruiter.png" alt="se-arrow"></div>
-            </div>
+
+
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;
-                    <strong class="textDecor APPOINTA">Finding a time that works
+                  <h4>&#8220; <strong class="textDecor APPOINTA">Finding a time that works
                       for both</strong> the potential candidate and the recruiter/hiring
                     manager is a challenge sometimes. This can be difficult to
                     coordinate, especially if the potential candidate is located in a
@@ -627,32 +627,41 @@
           </div>
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_candidate.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as many
-                      interviews as possible</strong> in the allotted time. The
-                    goal is to schedule the interviews in such a way that no interviewer is
-                    overworked and all of the interviews are conducted in a timely
-                    manner.&#8221;
+                 <h4>&#8220;
+                    <strong class="textDecor APPOINTA">Finding a time that works
+                      for both</strong> the potential candidate and the recruiter/hiring
+                    manager is a challenge sometimes. This can be difficult to
+                    coordinate, especially if the potential candidate is located in a
+                    different time zone.&#8221;
                   </h4>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="blankHXS"></div>
-
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
+                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                  <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as many
+                    interviews as possible</strong> in the allotted time. The
+                  goal is to schedule the interviews in such a way that no interviewer is
+                  overworked and all of the interviews are conducted in a timely
+                  manner.&#8221;
+                </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+ 
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
                     This
@@ -667,34 +676,30 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+ 
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
-            </div>
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
-                      responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
-                      manager's schedule is
-                      full</strong>, I have to spend more time and effort working on the
-                    interview
-                    schedule.&#8221;
-                  </h4>
+                    responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
+                    manager's schedule is
+                    full</strong>, I have to spend more time and effort working on the
+                  interview
+                  schedule.&#8221;
+                </h4>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_teammember.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;I may also coordinate with hiring managers and other employees to
                     <strong class="textDecor APPOINTA">ensure that
@@ -706,12 +711,9 @@
           </div>
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_teammember.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;I feel that it is best to schedule interviews in advance so that
                     both
@@ -726,12 +728,9 @@
           </div>
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_recruiter.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
                     help me to automate part of the scheduling process.&#8221;</h4>
@@ -739,23 +738,24 @@
               </div>
             </div>
           </div>
+ 
           <div class="blankHXS"></div>
 
-          <div class="Grid Grid--gutters Grid--1of4">
-            <div class="Grid-cell u-textCenter">
-              <div> <img class="iconM" src="ppl_candidate.png" alt="User"></div>
-            </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div>
+              <div class="element ">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure that
-                      the interviews are conducted in a timely and efficient manner</strong>, in
-                    order to avoid any delays in the
-                    hiring process.&#8221;</h4>
+                    the interviews are conducted in a timely and efficient manner</strong>, in
+                  order to avoid any delays in the
+                  hiring process.&#8221;</h4>
                 </div>
               </div>
             </div>
           </div>
+ 
+
+ 
 
         </div>
 
