--- a/appointa/index.html
+++ b/appointa/index.html
@@ -425,61 +425,46 @@
           </h1>
         </div>
       </div>
-      <div class="blankHS"></div>
       <section id="research">
-        <div class="Grid Grid--gutters Grid--cols-4 wrapper">
-          <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
+          <div class="Grid-cell BGappointa">
             <div class="element">
               <div class="elementInner">
-                <img class="IconCaseStudy" src="../icon/icon_Testing.svg" alt="se-arrow">
-
-                <h3><strong>Questions</strong></h3>
-                <h4>What we do not know
-                </h4>
-
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner">
-                <img class="IconCaseStudy" src="../icon/icon_document-text.svg" alt="se-arrow">
-
-                <h3><strong>Assumptions</strong></h3>
-                <h4>What we think we know
-                </h4>
-
-              </div>
-            </div>
-          </div>
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="elementInner">
-                <img class="IconCaseStudy" src="../icon/icon_book.svg" alt="se-arrow">
 
                 <h3><strong>Research</strong></h3>
-                <h4>How we test Assumptions
-                </h4>
+                <h4>&#8226; The problem space </h4>
+                <h4>&#8226; Understand users </h4>
 
               </div>
             </div>
           </div>
-          <div class="Grid-cell">
+          <div class="Grid-cell BGappointa">
             <div class="element">
-
               <div class="elementInner">
-                <img class="IconCaseStudy" src="../icon/icon_clipboard-tick.svg" alt="se-arrow">
 
-                <h3><strong>Facts</strong></h3>
-
-                <h4>What we know
-                </h4>
+                <h3><strong>Framing</strong></h3>
+                <h4>&#8226; The problem(s) to be solved </h4>
+                <h4>&#8226; Opportunities </h4>
 
               </div>
             </div>
           </div>
+
+          <div class="Grid-cell BGappointa">
+            <div class="element">
+              <div class="elementInner">
+
+                <h3><strong>Gathering</strong></h3>
+                <h4>&#8226; Enough evidence </h4>
+                <h4>&#8226; Initial direction on next step
+                </h4>
+              </div>
+            </div>
+          </div>
+ 
         </div>
 
+        <div class="blankHS"></div>
 
         <!-- Arrow -->
         <div class="wrapper">
@@ -613,7 +598,7 @@
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
-              <div class="element ">
+              <div class="element">
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4>&#8220; <strong class="textDecor APPOINTA">Finding a time that works
                       for both</strong> the potential candidate and the recruiter/hiring
