--- a/appointa/index.html
+++ b/appointa/index.html
@@ -425,44 +425,46 @@
           </h1>
         </div>
       </div>
-      <section id="research">
-        <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
-          <div class="Grid-cell BGappointa">
-            <div class="element">
-              <div class="elementInner">
+      <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
+        <div class="Grid-cell BGappointa">
+          <div class="element">
+            <div class="elementInner">
 
-                <h3><strong>Research</strong></h3>
-                <h4>&#8226; The problem space </h4>
-                <h4>&#8226; Understand users </h4>
+              <h3><strong>Research</strong></h3>
+              <h4>&#8226; The problem space </h4>
+              <h4>&#8226; Understand users </h4>
 
-              </div>
             </div>
           </div>
-          <div class="Grid-cell BGappointa">
-            <div class="element">
-              <div class="elementInner">
-
-                <h3><strong>Framing</strong></h3>
-                <h4>&#8226; The problem(s) to be solved </h4>
-                <h4>&#8226; Opportunities </h4>
-
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid-cell BGappointa">
-            <div class="element">
-              <div class="elementInner">
-
-                <h3><strong>Gathering</strong></h3>
-                <h4>&#8226; Enough evidence </h4>
-                <h4>&#8226; Initial direction on next step
-                </h4>
-              </div>
-            </div>
-          </div>
- 
         </div>
+        <div class="Grid-cell BGappointa">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Framing</strong></h3>
+              <h4>&#8226; The problem(s) to be solved </h4>
+              <h4>&#8226; Opportunities </h4>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="Grid-cell BGappointa">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Gathering</strong></h3>
+              <h4>&#8226; Enough evidence </h4>
+              <h4>&#8226; Initial direction on next step
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <section id="research">
+
 
         <div class="blankHS"></div>
 
@@ -845,6 +847,42 @@
           <h1 class="Grid Grid--center"> <span>Define</span><img class="moveUpDown widthLogo"
               src="../icon/icon_research.svg" alt="Research">
           </h1>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Research</strong></h3>
+              <h4>&#8226; The problem space </h4>
+              <h4>&#8226; Understand users </h4>
+
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Framing</strong></h3>
+              <h4>&#8226; The problem(s) to be solved </h4>
+              <h4>&#8226; Opportunities </h4>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Gathering</strong></h3>
+              <h4>&#8226; Enough evidence </h4>
+              <h4>&#8226; Initial direction on next step
+              </h4>
+            </div>
+          </div>
         </div>
       </div>
       <div class="blankHXS"></div>
