--- a/appointa/index.html
+++ b/appointa/index.html
@@ -380,9 +380,9 @@
           <ul>
             <li class=""><a href="#research">Research goals </a></li>
             <li class=""><a href="#insights">Interview insights </a></li>
-            <li class=""><a href="empathyMap"> Empathy map </a></li>
-            <li class=""><a href="personas">Personas </a></li>
-            <li class=""><a href="customerJoutney">Customer journey map </a></li>
+            <li class=""><a href="#empathyMap"> Empathy map </a></li>
+            <li class=""><a href="#personas">Personas </a></li>
+            <li class=""><a href="#customerJoutney">Customer journey map </a></li>
           </ul>
         </li>
         <li><a href="#define">Define</a>
@@ -390,6 +390,8 @@
             <li class=""><a href="#keyPainPoints">Key pain points </a></li>
 
             <li class=""><a href="#opportunities"> Turn Insights into Opportunities</a></li>
+            <li class=""><a href="#affinityMap"> Affinity diagram</a></li>
+            <li class=""><a href="#priorityMatrix"> Priority matrix</a></li>
 
 
           </ul>
@@ -406,7 +408,7 @@
             <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow &#38; testing </a></li>
           </ul>
         </li>
-        <li><a href="#design">Deliver</a>
+        <li><a href="#deliver">Deliver</a>
           <ul>
             <li class=""><a href="#screens">Hi-fi screens</a></li>
             <li class=""><a href="#prototype">Clickable prototype </a></li>
@@ -854,9 +856,9 @@
           <div class="element">
             <div class="elementInner">
 
-              <h3><strong>Research</strong></h3>
-              <h4>&#8226; The problem space </h4>
-              <h4>&#8226; Understand users </h4>
+              <h3><strong>Capture</strong></h3>
+              <h4>&#8226; The user needs </h4>
+              <h4>&#8226; Problem statement </h4>
 
             </div>
           </div>
@@ -865,9 +867,9 @@
           <div class="element">
             <div class="elementInner">
 
-              <h3><strong>Framing</strong></h3>
-              <h4>&#8226; The problem(s) to be solved </h4>
-              <h4>&#8226; Opportunities </h4>
+              <h3><strong>Align</strong></h3>
+              <h4>&#8226; a concise goal </h4>
+              <h4>&#8226; Problem seek to solved </h4>
 
             </div>
           </div>
@@ -877,10 +879,9 @@
           <div class="element">
             <div class="elementInner">
 
-              <h3><strong>Gathering</strong></h3>
-              <h4>&#8226; Enough evidence </h4>
-              <h4>&#8226; Initial direction on next step
-              </h4>
+              <h3><strong>Identify</strong></h3>
+              <h4>&#8226; metrics for success </h4>
+              <h4>&#8226; set a clear vision</h4>
             </div>
           </div>
         </div>
@@ -1047,6 +1048,41 @@
           <h1 class="Grid Grid--center"> <span>Develop</span><img class="moveUpDown widthLogo"
               src="../icon/icon_Redesign.svg" alt="Redesign">
           </h1>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Ideate</strong></h3>
+              <h4>&#8226; Brainstorm solutions </h4>
+              <h4>&#8226; Highlight opportunities </h4>
+
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Generate</strong></h3>
+              <h4>&#8226; Key flow charts </h4>
+              <h4>&#8226; Wireframes</h4>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="Grid-cell BGappointaColor">
+          <div class="element">
+            <div class="elementInner">
+
+              <h3><strong>Test</strong></h3>
+              <h4>&#8226; Test with potential users </h4>
+              <h4>&#8226; Iterate based on user feedback</h4>
+            </div>
+          </div>
         </div>
       </div>
       <section id="informationArchitecture">
@@ -1708,8 +1744,52 @@
 
     </section>
     <div class="blankHS"></div>
-    <section id="design">
+    <section id="deliver">
       <div class="colorBgAPPOINTA">
+        <div class="blankHS"></div>
+
+        <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+          <div class="Grid-cell">
+            <h1 class="Grid Grid--center"> <span>Deliver</span><img class="moveUpDown widthLogo"
+                src="../icon/icon_Redesign.svg" alt="Redesign">
+            </h1>
+          </div>
+        </div>
+        <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
+          <div class="Grid-cell BGappointa">
+            <div class="element">
+              <div class="elementInner">
+  
+                <h3><strong>Enhance</strong></h3>
+                <h4>&#8226; Mockup and Prototype </h4>
+                <h4>&#8226; Tactile representation of ideas </h4>
+  
+              </div>
+            </div>
+          </div>
+          <div class="Grid-cell BGappointa">
+            <div class="element">
+              <div class="elementInner">
+  
+                <h3><strong>Test</strong></h3>
+                <h4>&#8226; Key flow charts </h4>
+                <h4>&#8226; Tactile representation of ideas</h4>
+  
+              </div>
+            </div>
+          </div>
+  
+          <div class="Grid-cell BGappointa">
+            <div class="element">
+              <div class="elementInner">
+  
+                <h3><strong>Document</strong></h3>
+                <h4>&#8226; Design system </h4>
+                <h4>&#8226; Outcome</h4>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="blankHS"></div>
         <section id="screens">
           <!-- Arrow -->
